objects/zqu__ZuoraConfig__c.object
<CustomObject>
    <description>This object is now deprecated. Configuration information for Zuora applications.</description>
    <fields>
        <fullName>zqu__APIPassword__c</fullName>
        <description>Password for API Login</description>
        <inlineHelpText>Password for API Login</inlineHelpText>
        <label>APIPassword</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__APIURL__c</fullName>
        <description>URL used to connect to Zuora</description>
        <inlineHelpText>URL used to connect to Zuora</inlineHelpText>
        <label>APIURL</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__APIUsername__c</fullName>
        <description>User Name for API Login</description>
        <inlineHelpText>User Name for API Login</inlineHelpText>
        <label>APIUsername</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Is this config is active or not.</description>
        <inlineHelpText>Is this config is active or not.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zqu__AllowUpdateBillCycleDay__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allow update of bill cycle day of existing customers</description>
        <inlineHelpText>Allow update of bill cycle day of existing customers</inlineHelpText>
        <label>Allow Update BillCycleDay</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zqu__AllowUpdatingZuora__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Allow Updating of Zuora Account Information from SFDC</inlineHelpText>
        <label>Allow Updating Zuora Account Info</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zqu__BaseURL__c</fullName>
        <description>The BaseURL.</description>
        <inlineHelpText>The BaseURL.</inlineHelpText>
        <label>BaseURL</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__BillingAccount_AllowInvoiceEdit__c</fullName>
        <description>Allow Invoice Edit value for newly created accounts</description>
        <inlineHelpText>Allow Invoice Edit value for newly created accounts</inlineHelpText>
        <label>BillingAccount_AllowInvoiceEdit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>False</fullName>
                    <default>true</default>
                    <label>False</label>
                </value>
                <value>
                    <fullName>True</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zqu__BillingAccount_Batch__c</fullName>
        <description>Batch to be used for newly created accounts</description>
        <inlineHelpText>Batch to be used for newly created accounts</inlineHelpText>
        <label>BillingAccount_Batch</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Batch1</fullName>
                </value>
                <value>
                    <fullName>Batch2</fullName>
                </value>
                <value>
                    <fullName>Batch3</fullName>
                </value>
                <value>
                    <fullName>Batch4</fullName>
                </value>
                <value>
                    <fullName>Batch5</fullName>
                </value>
                <value>
                    <fullName>Batch6</fullName>
                </value>
                <value>
                    <fullName>Batch7</fullName>
                </value>
                <value>
                    <fullName>Batch8</fullName>
                </value>
                <value>
                    <fullName>Batch9</fullName>
                </value>
                <value>
                    <fullName>Batch10</fullName>
                </value>
                <value>
                    <fullName>Batch11</fullName>
                </value>
                <value>
                    <fullName>Batch12</fullName>
                </value>
                <value>
                    <fullName>Batch13</fullName>
                </value>
                <value>
                    <fullName>Batch14</fullName>
                </value>
                <value>
                    <fullName>Batch15</fullName>
                </value>
                <value>
                    <fullName>Batch16</fullName>
                </value>
                <value>
                    <fullName>Batch17</fullName>
                </value>
                <value>
                    <fullName>Batch18</fullName>
                </value>
                <value>
                    <fullName>Batch19</fullName>
                </value>
                <value>
                    <fullName>Batch20</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zqu__BillingAccount_BillCycleDay__c</fullName>
        <description>Bill Cycle Day for newly created Accounts</description>
        <inlineHelpText>Bill Cycle Day for newly created Accounts</inlineHelpText>
        <label>BillingAccount_BillCycleDay</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zqu__Currency__c</fullName>
        <description>Default Currency Value in Quote</description>
        <inlineHelpText>Default Currency Value in Quote</inlineHelpText>
        <label>Currency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>USD</fullName>
                    <default>true</default>
                    <label>USD</label>
                </value>
                <value>
                    <fullName>EUR</fullName>
                </value>
                <value>
                    <fullName>GBP</fullName>
                </value>
                <value>
                    <fullName>JPY</fullName>
                </value>
                <value>
                    <fullName>CAD</fullName>
                </value>
                <value>
                    <fullName>CHF</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zqu__DateFormatInput__c</fullName>
        <label>Date Format Input</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>mm/dd/yyyy</fullName>
                    <default>true</default>
                    <label>mm/dd/yyyy</label>
                </value>
                <value>
                    <fullName>dd/mm/yyyy</fullName>
                </value>
                <value>
                    <fullName>yyyy-mm-dd</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zqu__Debug__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Turns debugging on or off</description>
        <inlineHelpText>Turns debugging on or off</inlineHelpText>
        <label>Debug</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zqu__EnableAmendmentsDEV__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Amendments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zqu__InvoiceDeliveryPreferences__c</fullName>
        <description>Default Invoice Delivery Preference in Quote</description>
        <inlineHelpText>Default Invoice Delivery Preference in Quote</inlineHelpText>
        <label>Invoice Delivery Preferences</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Print</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zqu__MatchContractEffectiveDate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Setting to allow Bill Cycle Day to match the contract effective date when creating a new account</description>
        <inlineHelpText>Setting to allow Bill Cycle Day to match the contract effective date when creating a new account</inlineHelpText>
        <label>Match contract effective date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zqu__MaxAPIQueryFilter__c</fullName>
        <label>Max API Query Filter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__PaymentTerm__c</fullName>
        <description>Default Payment Term Value in Quote</description>
        <inlineHelpText>Default Payment Term Value in Quote</inlineHelpText>
        <label>Payment Term</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Due Upon Receipt</fullName>
                </value>
                <value>
                    <fullName>Net 30</fullName>
                </value>
                <value>
                    <fullName>Net 45</fullName>
                </value>
                <value>
                    <fullName>Net 60</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zqu__ProductSelectorVersion__c</fullName>
        <label>ProductSelectorVersion</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>VF-Pages</fullName>
                    <default>true</default>
                    <label>VF-Pages</label>
                </value>
                <value>
                    <fullName>S-Controls</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zqu__QuoteReadOnly__c</fullName>
        <defaultValue>false</defaultValue>
        <description>set quote to read-only after successfully submitted to z-billing</description>
        <inlineHelpText>set quote to read-only after successfully submitted to z-billing</inlineHelpText>
        <label>Quote Read-Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zqu__QuoteURL__c</fullName>
        <description>URL to access Quote template</description>
        <inlineHelpText>URL to access Quote template</inlineHelpText>
        <label>QuoteURL</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__SubscriptionAutorenewDefault__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Default Autorenew Value in Quote</description>
        <inlineHelpText>Default Autorenew Value in Quote</inlineHelpText>
        <label>Subscription Autorenew default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zqu__Template_Id__c</fullName>
        <description>Quote Template ID (from Zuora Admin)</description>
        <inlineHelpText>Quote Template ID (from Zuora Admin)</inlineHelpText>
        <label>Template_Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Zuora Config (Deprecated)</label>
    <listViews>
        <fullName>zqu__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Zuora Config Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Zuora Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>